--- a/style/style.scss
+++ b/style/style.scss
@@ -7,23 +7,9 @@ body {
   align-items: center;
 }
 
-@font-face {
-  font-family: Gilroy_Bold; /* Имя шрифта */
-  src: url(/fonts/Gilroy-Bold.ttf); /* Путь к файлу со шрифтом */
-}
-
-@font-face {
-  font-family: Gilroy_Medium; /* Имя шрифта */
-  src: url(/fonts/Gilroy-Medium.ttf); /* Путь к файлу со шрифтом */
-}
-
-@font-face {
-  font-family: Gilroy_Semibold; /* Имя шрифта */
-  src: url(/fonts/Gilroy-Semibold.ttf); /* Путь к файлу со шрифтом */
-}
-
 input {
-  font-family: Gilroy_Medium;
+  font-weight: 500;
+  font-family: sans-serif;
   line-height: 100%;
   font-size: 16px;
   width: 100%;
@@ -40,6 +26,10 @@ input {
   top: -2.9%;
   right: -7.6%;
   z-index: -1;
+
+  @media (max-width: 500px) {
+    display: none;
+  }
 }
 
 ._lock {
@@ -57,6 +47,10 @@ input {
   font-size: 13px;
   color: #23c967;
   margin-left: 5px;
+}
+
+._failed {
+  background: #ea717f !important;
 }
 
 .card {
@@ -106,11 +100,12 @@ input {
 
   .form__btn {
     background: #23c967;
-    padding: 11px 0;
+    padding: 9px 0;
     width: 100%;
     border: none;
     border-radius: 15px;
-    font-family: Gilroy_Bold;
+    font-weight: bold;
+    font-family: sans-serif;
     color: #fff;
     margin-top: 19px;
     font-size: 18px;
@@ -122,7 +117,8 @@ input {
     margin-top: 11px;
     display: flex;
     justify-content: center;
-    font-family: Gilroy_Medium;
+    font-weight: 500;
+    font-family: sans-serif;
     font-size: 14px;
     color: #afb4cc;
     align-items: center;
@@ -139,11 +135,45 @@ input {
     // display: block;
     display: none;
   }
+
+  .btn-pay {
+    // display: block;
+    display: none;
+  }
+
+  .successful__form {
+    display: none;
+    // display: block;
+
+    .elem__description {
+      line-height: 23px;
+      margin-bottom: 34px;
+    }
+
+    .elem__success {
+      margin: 0 auto;
+    }
+  }
+
+  .failed__form {
+    display: none;
+    // display: block;
+
+    .elem__description {
+      line-height: 23px;
+      margin-bottom: 4px;
+    }
+
+    .elem__success {
+      margin: 0 auto;
+    }
+  }
 }
 
 .elem {
   .elem__head {
-    font-family: Gilroy_Bold;
+    font-weight: bold;
+    font-family: sans-serif;
     line-height: 100%;
     margin-bottom: 12px;
     font-size: 18px;
@@ -152,14 +182,16 @@ input {
   }
 
   .elem__description {
-    font-family: Gilroy_Medium;
+    font-weight: 500;
+    font-family: sans-serif;
     line-height: 100%;
     margin-bottom: 12px;
     font-size: 16px;
   }
 
   .elem__head_add {
-    font-family: Gilroy_Semibold;
+    font-weight: 600;
+    font-family: sans-serif;
     color: #23c967;
     line-height: 100%;
     margin-bottom: 12px;
@@ -233,13 +265,15 @@ input {
     }
 
     .item__title {
-      font-family: Gilroy_Semibold;
+      font-weight: 600;
+      font-family: sans-serif;
       font-size: 16px;
       line-height: 100%;
     }
 
     .item__description {
-      font-family: Gilroy_Medium;
+      font-weight: 500;
+      font-family: sans-serif;
       line-height: 100%;
       font-size: 13px;
       margin-top: 5px;
@@ -257,5 +291,86 @@ input {
     ._active__des {
       color: #23c967;
     }
+  }
+}
+
+.loader {
+  font-size: 10px;
+  display: none;
+  margin: 0 auto;
+  text-indent: -9999em;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #ffffff;
+  background: -moz-linear-gradient(
+    left,
+    #ffffff 10%,
+    rgba(255, 255, 255, 0) 42%
+  );
+  background: -webkit-linear-gradient(
+    left,
+    #ffffff 10%,
+    rgba(255, 255, 255, 0) 42%
+  );
+  background: -o-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
+  background: -ms-linear-gradient(
+    left,
+    #ffffff 10%,
+    rgba(255, 255, 255, 0) 42%
+  );
+  background: linear-gradient(
+    to right,
+    #ffffff 10%,
+    rgba(255, 255, 255, 0) 42%
+  );
+  position: relative;
+  -webkit-animation: load3 1.4s infinite linear;
+  animation: load3 1.4s infinite linear;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.loader:before {
+  width: 50%;
+  height: 50%;
+  background: #ffffff;
+  border-radius: 100% 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+}
+.loader:after {
+  background: #23c967;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
+  content: "";
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+@-webkit-keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
