--- a/style/style.scss
+++ b/style/style.scss
@@ -26,10 +26,6 @@ input {
   top: -2.9%;
   right: -7.6%;
   z-index: -1;
-
-  @media (max-width: 500px) {
-    display: none;
-  }
 }
 
 ._lock {
@@ -56,7 +52,7 @@ input {
 .card {
   max-width: 440px;
   min-height: 535px;
-  max-height: 535px;
+  max-height: 635px;
   z-index: 10;
   background: #fff;
   border-radius: 0 50px 50px 50px;
@@ -74,6 +70,9 @@ input {
     min-height: 369px;
     max-height: 369px;
     padding-right: 20px;
+    @media (max-width: 500px) {
+      max-height: 400px;
+    }
     // display: none;
 
     &::-webkit-scrollbar-track {
@@ -101,7 +100,7 @@ input {
   .form__btn {
     background: #23c967;
     padding: 9px 0;
-    width: 100%;
+    width: 95%;
     border: none;
     border-radius: 15px;
     font-weight: bold;
@@ -110,6 +109,9 @@ input {
     margin-top: 19px;
     font-size: 18px;
     cursor: pointer;
+    @media (max-width: 500px) {
+      font-size: 16px;
+    }
     // display: none;
   }
 
@@ -122,13 +124,21 @@ input {
     font-size: 14px;
     color: #afb4cc;
     align-items: center;
+    margin-right: 20px;
     // display: none;
+    @media (max-width: 500px) {
+      font-size: 12px;
+    }
   }
 
   .form__product {
     display: none;
     // display: block;
     overflow-y: visible;
+
+    @media (max-width: 500px) {
+      max-height: none;
+    }
   }
 
   .btn-product {
